--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,7 +3,14 @@
 </body>
 
 <footer>
-  You can also add new routes in URL <br> Like Work, Home etc..❤
+ <h4 class="footer">Made by <strong>Nishanth</h4>
+  <div class="social">
+    <a href="https://www.instagram.com/i.am_nishanth/" target="_blank" rel="noreferrer noopener"><i class="soc-icon-1 fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/nishanth.arju.7/" target="_blank" rel="noreferrer noopener"><i class=" soc-icon-2 fab fa-facebook"></i></a>
+    <a href="mailto:nishanthalapati123@gmail.com" target="_blank" rel="noreferrer noopener"><i class=" soc-icon-3 far fa-envelope"></i></a>
+  </div>
+    
+
 </footer>
 
 </html>
