--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <title>To Do List</title>
   <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.flaticon.com/512/3208/3208723.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
+  <script src="https://use.fontawesome.com/releases/v5.13.1/js/all.js"></script>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
